--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
-  "name": "templates",
-  "version": "1.0.0",
-  "description": "Gulp Skeleton 2017",
+  "name": "travel companion",
+  "version": "0.0.1",
+  "description": "Travel Companion",
   "main": "index.html",
-  "dependencies": {
-    "gulp": "^3.9.0"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "jshint-stylish": "^2.0.1"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/veratechnz/R-NEW-PUB.git"
-  },
-  "author": "Jared",
+  "keywords": [
+    "grunt",
+  ],
+  "author": "Sumitra Manga",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/veratechnz/R-NEW-PUB/issues"
-  },
-  "homepage": "https://github.com/veratechnz/R-NEW-PUB#readme"
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^3.4.0",
+    "grunt-contrib-watch": "^1.1.0"
+  }
 }
